--- a/signin_screen.ui
+++ b/signin_screen.ui
@@ -155,6 +155,9 @@ color: rgb(61, 44, 141);</string>
     <property name="text">
      <string/>
     </property>
+    <property name="placeholderText">
+     <string>CrazyMeowl</string>
+    </property>
    </widget>
    <widget class="QLineEdit" name="password_box">
     <property name="geometry">
@@ -171,6 +174,9 @@ background-color:rgb(145, 107, 191);
 border-radius:15px;
 border-color: rgb(84, 255, 5);
 color: rgb(61, 44, 141);</string>
+    </property>
+    <property name="placeholderText">
+     <string>nice</string>
     </property>
    </widget>
    <widget class="QPushButton" name="signin_button">
